--- a/sales_data_pro.html
+++ b/sales_data_pro.html
@@ -25,15 +25,20 @@
             </div>
             <div class="project-info">
                 <h2>Sales-Data-Analysis</h2>
-                <p>I use Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p><br>
-                <p>We start by cleaning our data. Drop NaN values from DataFrame, Removing rows based on a condition, Change the type of columns (to_numeric, to_datetime, astype). Once we have cleaned up our data a bit, we move the data exploration section. In this section we explore 4 high level business questions To answer these questions we walk through many different pandas & matplotlib methods. They include:</p>
+                <p>In this project, I used Python, specifically the pandas and matplotlib libraries, to analyze and answer business questions based on 12 months of sales data. The dataset includes details on electronic store purchases, broken down by month, product type, cost, and purchase address.</p>
+                <p>Key Steps in the Analysis:</p>
+                <p><b>Data Cleaning:</b> We started by cleaning the data. This involved: 
+                    <li>Removing any empty (NaN) values.</li>
+                    <li>Deleting rows based on specific conditions.</li>
+                    <li>Changing column types to numeric or datetime formats as needed.</li>
+                </p>
+                <p><b>Data Exploration:</b> After cleaning, we explored the data to answer four main business questions. This involved using various pandas and matplotlib techniques, such as:
+                    <li>Combining multiple CSV files into a single DataFrame using pd.concat.</li>
+                    <li>Creating new columns by extracting information from strings using .str.</li>
+                    <li>Grouping data for aggregate analysis with the .groupby() method.</li>
+                    <li>Creating bar charts and line graphs to visualize the results and properly labeling them for clarity.</li>
+                </p>
                 
-                <ul>
-                    <li>Concatenating multiple csvs together to create a new DataFrame (pd.concat)</li>
-                    <li>Adding columns Parsing cells as strings to make new columns (.str)</li>
-                    <li>Using the .apply() method Using groupby to perform aggregate analysis</li>
-                    <li>Plotting bar charts and lines graphs to visualize our results Labeling our graphs</li>
-                </ul>
             </div>
         </div>
     </div>
