--- a/supply_chain_pro.html
+++ b/supply_chain_pro.html
@@ -25,13 +25,18 @@
             </div>
             <div class="project-info">
                 <h2>Supply Chain Analysis USA</h2>
-                <p>This project focuses on analyzing supply chain data from the AdventureWorks2019 database to gain insights into various aspects of the supply chain process. The analysis includes tasks such as supplier performance evaluation, inventory management analysis, demand forecasting, and procurement analysis.</p>
-                <p>The dataset used for this analysis is sourced from the AdventureWorks2019 database, which provides comprehensive information on purchase orders, vendors, products, and sales transactions.</p>
+                <p>This project analyzes supply chain data from the AdventureWorks2019 database to find useful insights. The analysis looks at important areas like supplier performance, inventory management, demand forecasting, and procurement. </p>
+                <p>Main Focus Areas:</p>
+                <li>Supplier Performance: Checking how well suppliers are doing to improve purchasing strategies.</li>
+                <li>Inventory Management: Studying stock levels and turnover to better manage inventory and cut down on costs.</li>
+                <li>Demand Forecasting: Predicting future demand to help with planning and resource use.</li>
+                <li>Procurement Analysis: Reviewing purchasing patterns to make better decisions and save money.</li>
+                <p><b>Dataset:</b> The AdventureWorks2019 database provides detailed information about purchase orders, vendors, products, and sales transactions, which is used for this analysis.</p>
                 <h3>Tools and Technologies</h3>
                 <ul>
-                    <li>SQL: Used for querying and extracting data from the AdventureWorks2019 database.</li>
-                    <li>Python: Utilized libraries such as pandas for data cleaning and manipulation.</li>
-                    <li>Tableau: Used for data visualization and creating interactive dashboards to present the analysis results.</li>
+                    <li>SQL: Used to query and pull data from the AdventureWorks2019 database.</li>
+                    <li>Python: Used for cleaning and organizing data, with the help of libraries like pandas.</li>
+                    <li>Tableau: Used to create visualizations and interactive dashboards that show the results of the analysis.</li>
                 </ul>
             </div>
         </div>
