--- a/tableau_pro.html
+++ b/tableau_pro.html
@@ -25,8 +25,12 @@
             </div>
             <div class="project-info">
                 <h2>Tableau Project - Data Visualization</h2>
-                <p>Dynamic dashboard for British Airways Reviews, designed to provide comprehensive insights at a glance. This interactive platform allows users to seamlessly explore various metrics including date, continent, traveler type, seat type, and aircraft.</p>
-                <p>The dashboard features a visually engaging map, illustrating average values by country for the selected parameter. Additionally, three insightful charts offer a deeper dive into the data, showcasing average values by month, aircraft, and total reviews. With a concise summary row at the top, users can quickly grasp key findings and trends. It’s a powerful tool for understanding customer feedback and enhancing service delivery.</p>
+                <p>This project showcases a dynamic and interactive dashboard created using Tableau, designed to analyze British Airways customer reviews. The dashboard provides a comprehensive overview by allowing users to explore various metrics such as traveler type, seating class, and date range.</p>
+                <p>Key features include:</p>
+                <li id="project-info-li" >Global Map Visualization: Displays average customer ratings by country, offering insights into regional satisfaction.</li>
+                <li id="project-info-li">Trend Analysis: Charts showing rating trends over time, helping to identify patterns in customer feedback.</li>
+                <li id="project-info-li">Aircraft Performance: A detailed breakdown of ratings by aircraft type, highlighting strengths and areas for improvement.</li><br>
+                <p>This dashboard is a powerful tool for understanding customer satisfaction and guiding data-driven decisions in service delivery.</p>
             </div>
         </div>
     </div>
